--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -43,6 +43,7 @@ nav.navbar-transparente {
 
 .btn-custom {
 	color: white;
+	font-weight: bolder;
 	border-radius: 500px;
 	-webkit-border-radius: 500px;
 	-moz-border-radius: 500px;
