--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -1,157 +1,65 @@
 /* 
 ==============================================
-		Telas extra pequenas (até 575.98px)
+		Telas pequenas e extra pequenas (até 767.98px)
 ==============================================
 */
+@media (max-width: 767.98px) {
+    /* Centraliza o conteúdo do rodapé em telas móveis */
+    footer .row > div {
+        text-align: center;
+        margin-bottom: 25px;
+    }
+    
+    footer .row > div:last-child {
+        margin-bottom: 0;
+    }
+
+    footer .row > div ul {
+        justify-content: center;
+    }
+
+    /* Remove rotação das imagens */
+    .rotacionar {
+        transform: rotate(0deg);
+        padding-left: 0;
+    }
+}
+
+
+/* ==============================================
+   Ajustes específicos para cada tamanho de tela
+   ============================================== */
+
+/* Telas extra pequenas (até 575.98px) */
 @media (max-width: 575.98px) {
-
-	.btn-custom {
-		margin: 10px 15px;
-    font-size: 1em;
-	}
-
-  h1 {
-    font-size: 3em;
-  }
-
-  h2 {
-    font-size: 2em;
-  }
-
-  h3 {
-    font-size: 1.5em;
-  }
-
-  /* Imagens de albuns um pouco menores e com margem */
-  .albuns .col-md-6 {
-    padding: 0 15px;
-  }
-
-  .albuns img {
-    margin-bottom: 15px;
-  }
-
-  /* Remove a rotação em telas pequenas */
-  .rotacionar {
-    -ms-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-    padding-left: 0;
-  }
-
-  /* Ajusta o padding da imagem do celular */
-  .rotacionar .col-md-6 {
-    padding: 0 15px;
-  }
-
-  .rotacionar img {
-    margin-bottom: 15px;
-  }
-
-  /* Diminui os ícones do carrossel */
-  .carousel-control-prev i,
-  .carousel-control-next i {
-    font-size: 2em;
-  }
-
-  /* Centraliza o conteúdo do rodapé */
-  footer .col-lg-3 {
-    text-align: center;
-  }
-
-  footer .col-lg-3 ul {
-    justify-content: center;
-  }
-
-  footer #media {
-    justify-content: center;
-  }
-
-  footer h4 {
-    margin-top: 20px;
-  }
+    .btn-custom { margin: 10px 15px; font-size: 1em; }
+    h1 { font-size: 3em; }
+    h2 { font-size: 2em; }
+    h3 { font-size: 1.5em; }
+    .albuns img { margin-bottom: 15px; }
+    .rotacionar img { margin-bottom: 15px; }
+    .carousel-control-prev i, .carousel-control-next i { font-size: 2em; }
 }
 
-/* 
-==============================================
-		Telas pequenas (entre 576px e 767.98px)
-==============================================
-*/
+/* Telas pequenas (576px - 767.98px) */
 @media (min-width: 576px) and (max-width: 767.98px) {
-	h1 {
-		font-size: 3em;
-	}
-
-  h2 {
-    font-size: 2.5em;
-  }
-
-	.btn-custom {
-		margin: 10px 15px;
-	}
-
-  /* Remove a rotação */
-  .rotacionar {
-    -ms-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-    padding-left: 0;
-  }
+    h1 { font-size: 3em; }
+    h2 { font-size: 2.5em; }
+    .btn-custom { margin: 10px 15px; }
 }
 
-/* 
-==============================================
-		Telas médias (entre 768px e 991.98px)
-==============================================
-*/
+/* Telas médias (768px - 991.98px) */
 @media (min-width: 768px) and (max-width: 991.98px) {
-	h1 {
-		font-size: 4em;
-	}
-
-  h2 {
-    font-size: 2.8em;
-  }
-
-  /* Alinha o conteúdo do rodapé no centro em tablets */
-  footer .col-md-6 {
-    text-align: center;
-    margin-bottom: 30px; 
-  }
-
-  footer .col-md-6 ul {
-    justify-content: center;
-  }
-
-  footer .col-md-6:last-child,
-  footer .col-md-6:nth-last-child(2) {
-    margin-bottom: 0;
-  }
-
-  footer #media {
-    justify-content: center;
-  }
-
+    h1 { font-size: 4em; }
+    h2 { font-size: 2.8em; }
 }
 
-/* 
-==============================================
-		Telas grandes (entre 992px e 1199.98px)
-==============================================
-*/
+/* Telas grandes (992px - 1199.98px) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
-	h1 {
-		font-size: 5em;
-	}
+    h1 { font-size: 5em; }
 }
 
-/* 
-==============================================
-		Telas extra grandes (acima de 1200px)
-==============================================
-*/
+/* Telas extra grandes (acima de 1200px) */
 @media (min-width: 1200px) {
-	h1 {
-		font-size: 6em;
-	}
+    h1 { font-size: 6em; }
 }
