--- a/src/css/estilos-globais.css
+++ b/src/css/estilos-globais.css
@@ -1,3 +1,6 @@
+/* =========================
+   Reset e base
+========================= */
 * {
     margin: 0;
     padding: 0;
@@ -5,187 +8,221 @@
 }
 
 html, body, #home {
-	height: 100%;
-	overflow-x: hidden;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 body {
-	background: url(../imagens/capa.png), url(../imagens/ruido.png), 
-	linear-gradient(50deg, #ff4169, #7c26f8);
-	background-attachment: fixed;
-	font-family: Helvetica, Arial, sans-serif;
+    background: 
+        url(../imagens/capa.png),
+        url(../imagens/ruido.png),
+        linear-gradient(50deg, #ff4169, #7c26f8);
+    background-attachment: fixed;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
-nav.navbar-transparente {
-	background: rgba(0, 0, 0, 0.8);
-}
 
-.navbar-light .navbar-nav .nav-link {
-	color: white;
-	padding: 10px;
-}
-
-.navbar-light .navbar-nav .nav-link:hover {
-	color: #9bf0e1;
-}
-
-.navbar-light .navbar-toggler {
-	color: rgba(255, 255, 255, 0.5);
-	border-color: rgba(255, 255, 255, 0.5);
-	padding: 15px;
-	margin: 20px;
-}
-
-.divisor {
-	width: 1px;
-	background: white;
-	margin: 12px 15px;
-}
-
-.capa {
-	text-align: center;
-}
-
-.btn-custom {
-	color: white;
-	font-weight: bolder;
-	border-radius: 500px;
-	-webkit-border-radius: 500px;
-	-moz-border-radius: 500px;
-	transition: background 0.4s, color 0.4s;
-	padding: 20px;
-	margin: 15px;
-}
-
-.btn-roxo {
-	background: #7c25f8;
-}
-
-.btn-roxo:hover {
-	background: #6207e3;
-	color: white;
-}
-
-.btn-branco {
-	border: 2px solid white;
-}
-
-.btn-branco:hover {
-	background-color: white;
-	color: black;
-}
-
-.carousel-control-next, .carousel-control-prev {
-	width: 10%;
-}
-
-.caixa {
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
-
-#servicos {
-	background: white;
-}
-
-#servicos h2, #servicos h3 {
-	color: #7c25f8;
-}
-
-#recursos h2 {
-	color: white;
-}
-
-#recursos h3 {
-	color: #9bf0e1;
-}
-
-.albuns {
-	padding: 10px 0;
-}
-
-.rotacionar {
-	-ms-transform: rotate(30deg);
-	-webkit-transform: rotate(30deg);
-	transform: rotate(30deg);
-	padding-left: 80px;
-}
-
-footer {
-	background: #000;
-	padding: 50px 0px 20px 0px;
-	position: relative;
-}
-
-footer h4 {
-	color: #919496;
-	font-size: 1em;
-	text-transform: uppercase;
-}
-
-footer .navbar-nav a {
-	color: white;
-	font-size: 1em;
-}
-
-#dev {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 23px;
-	color: white;
-}
-
-footer #dev:hover {
-	color: #9bf0e1;
-	text-decoration: none;
-}
-
-.externo::after {
-    content:'\1F517';
-}
-
-footer ul {
-	list-style: none;
-  	padding-left: 0;
-}
-
-footer #media, footer .social-media-icons {
-	display: flex;
-}
-
-footer #media li, footer .social-media-icons li {
-  margin: 0 10px;
-}
-
-.devicon-img {
-  width: 60px;
-  height: 55px;
-  padding-top: 10px 0px 10px 0px;
-}
-
-.social-icon {
-  width: 45px;
-}
-
+/* =========================
+   Tipografia
+========================= */
 h1 {
-	font-weight: 900;
-	letter-spacing: -0.05em;
-	margin-bottom: 50px;
-	color: white;
+    font-weight: 900;
+    letter-spacing: -0.05em;
+    margin-bottom: 50px;
+    color: white;
 }
 
 h2 {
-	font-size: 3em;
-	font-weight: 700;
-	letter-spacing: -0.04em;
+    font-size: 3em;
+    font-weight: 700;
+    letter-spacing: -0.04em;
 }
 
 h3 {
-	font-size: 2em;
-	font-weight: 700;
-	letter-spacing: -0.04em;
+    font-size: 2em;
+    font-weight: 700;
+    letter-spacing: -0.04em;
 }
+
+
+/* =========================
+   Navbar
+========================= */
+nav.navbar-transparente {
+    background: rgba(0, 0, 0, 0.8);
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: white;
+    padding: 10px;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+    color: #9bf0e1;
+}
+
+.navbar-light .navbar-toggler {
+    color: rgba(255, 255, 255, 0.5);
+    border-color: rgba(255, 255, 255, 0.5);
+    padding: 15px;
+    margin: 20px;
+}
+
+.divisor {
+    width: 1px;
+    background: white;
+    margin: 12px 15px;
+}
+
+
+/* =========================
+   Capa e layout geral
+========================= */
+.capa {
+    text-align: center;
+}
+
+.caixa {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+
+/* =========================
+   Botões
+========================= */
+.btn-custom {
+    color: white;
+    font-weight: bolder;
+    border-radius: 500px;
+    transition: background 0.4s, color 0.4s;
+    padding: 20px;
+    margin: 15px;
+}
+
+.btn-roxo {
+    background: #7c25f8;
+}
+
+.btn-roxo:hover {
+    background: #6207e3;
+    color: white;
+}
+
+.btn-branco {
+    border: 2px solid white;
+}
+
+.btn-branco:hover {
+    background-color: white;
+    color: black;
+}
+
+
+/* =========================
+   Carousel
+========================= */
+.carousel-control-next,
+.carousel-control-prev {
+    width: 10%;
+}
+
+
+/* =========================
+   Seções específicas
+========================= */
+#servicos {
+    background: white;
+}
+
+#servicos h2,
+#servicos h3 {
+    color: #7c25f8;
+}
+
+#recursos h2 {
+    color: white;
+}
+
+#recursos h3 {
+    color: #9bf0e1;
+}
+
+.albuns {
+    padding: 10px 0;
+}
+
+.rotacionar {
+    transform: rotate(30deg);
+    padding-left: 80px;
+}
+
+
+/* =========================
+   Footer
+========================= */
+footer {
+    background: #000;
+    padding: 50px 0 20px 0;
+    position: relative;
+}
+
+footer h4 {
+    color: #919496;
+    font-size: 1em;
+    text-transform: uppercase;
+}
+
+footer .navbar-nav a {
+    color: white;
+    font-size: 1em;
+}
+
+footer ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+footer #media,
+footer .social-media-icons {
+    display: flex;
+}
+
+footer #media li,
+footer .social-media-icons li {
+    margin: 0 10px;
+}
+
+#dev {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 23px;
+    color: white;
+}
+
+footer #dev:hover {
+    color: #9bf0e1;
+    text-decoration: none;
+}
+
+
+/* =========================
+   Ícones e utilidades
+========================= */
+.externo::after {
+    content: '\1F517';
+}
+
+.devicon-img {
+    width: 60px;
+    height: 55px;
+}
+
+.social-icon {
+    width: 45px;
+}
+
 
 /* 
 ==============================================
@@ -193,12 +230,11 @@ h3 {
 ==============================================
 */
 @media (max-width: 767.98px) {
-    /* Centraliza o conteúdo do rodapé em telas móveis */
     footer .row > div {
         text-align: center;
         margin-bottom: 25px;
     }
-    
+
     footer .row > div:last-child {
         margin-bottom: 0;
     }
@@ -207,7 +243,6 @@ h3 {
         justify-content: center;
     }
 
-    /* Remove rotação das imagens */
     .rotacionar {
         transform: rotate(0deg);
         padding-left: 0;
@@ -217,8 +252,7 @@ h3 {
 
 /* ==============================================
    Ajustes específicos para cada tamanho de tela
-   ============================================== 
-*/
+============================================== */
 @media (max-width: 575.98px) {
     .btn-custom { margin: 10px 15px; font-size: 1em; }
     h1 { font-size: 3em; }
@@ -226,7 +260,8 @@ h3 {
     h3 { font-size: 1.5em; }
     .albuns img { margin-bottom: 15px; }
     .rotacionar img { margin-bottom: 15px; }
-    .carousel-control-prev i, .carousel-control-next i { font-size: 2em; }
+    .carousel-control-prev i,
+    .carousel-control-next i { font-size: 2em; }
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
