--- a/templates/footer.html
+++ b/templates/footer.html
@@ -71,5 +71,13 @@
         </ul>
       </div>
     </div>
+    <div class="footer-bottom mt-4 pt-4 border-top d-flex justify-content-between align-items-center">
+      <ul class="list-inline mb-0">
+        <li class="list-inline-item"><a href="/pages/legal.html">Legal</a></li>
+        <li class="list-inline-item"><a href="/pages/legal.html#privacy">Centro de Privacidade</a></li>
+        <li class="list-inline-item"><a href="/pages/legal.html#privacy">Política de Privacidade</a></li>
+      </ul>
+      <p class="text-muted mb-0">&copy; 2025 KingDomfy</p>
+    </div>
   </div>
 </footer>
