--- a/templates/footer.html
+++ b/templates/footer.html
@@ -55,17 +55,17 @@
         <ul class="social-media-icons">
           <li>
             <a href="#" aria-label="Facebook">
-              <img src="/src/imagens/facebook.png" class="social-icon" alt="Facebook">
+              <img src="../src/imagens/facebook.png" class="social-icon" alt="Facebook">
             </a>
           </li>
           <li>
             <a href="#" aria-label="Twitter">
-              <img src="/src/imagens/twitter.png" class="social-icon" alt="Twitter">
+              <img src="../src/imagens/twitter.png" class="social-icon" alt="Twitter">
             </a>
           </li>
           <li>
             <a href="#" aria-label="Instagram">
-              <img src="/src/imagens/instagram.png" class="social-icon" alt="Instagram">
+              <img src="../src/imagens/instagram.png" class="social-icon" alt="Instagram">
             </a>
           </li>
         </ul>
