--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
     <div class="container">
       <a href="/index.html" class="navbar-brand">
-        <img src="/src/imagens/KingDomfy.png" width="100" alt="Logo KingDomfy">
+        <img src="../src/imagens/KingDomfy.png" width="100" alt="Logo KingDomfy">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-principal" aria-controls="nav-principal" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars text-white"></i>
