--- a/src/css/estilos-globais.css
+++ b/src/css/estilos-globais.css
@@ -120,6 +120,13 @@ nav.navbar-transparente {
     color: white;
 }
 
+.conteudo-interno h1 {
+    font-size: 2.2em;
+    font-weight: 700;
+    color: white;
+    margin-bottom: 20px;
+}
+
 .conteudo-interno h2, .conteudo-interno p, .conteudo-interno label {
     color: white;
 }
@@ -280,8 +287,7 @@ footer #dev:hover {
 }
 
 .link-interno:hover {
-    color: #1DB954; 
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 /* =========================
