--- a/src/css/estilos-globais.css
+++ b/src/css/estilos-globais.css
@@ -114,27 +114,22 @@ nav.navbar-transparente {
 
 .conteudo-interno {
     background: #282828;
-    padding: 40px;
+    padding: 30px;
     border-radius: 15px;
     margin-top: 100px;
-    margin-bottom: 40px;
     color: white;
 }
 
+/* ===== ALTERAÇÃO PONTUAL: TAMANHO DO H1 ===== */
 .conteudo-interno h1 {
     font-size: 2.2em;
     font-weight: 700;
     color: white;
-    margin-top: 20px;
     margin-bottom: 20px;
 }
 
-.conteudo-interno h2 {
-    color: #fff;
-} 
-
-.conteudo-interno p, .conteudo-interno label {
-    color: #B3B3B3;
+.conteudo-interno h2, .conteudo-interno p, .conteudo-interno label {
+    color: white;
 }
 
 body:not(#home) .caixa {
@@ -287,13 +282,9 @@ footer #dev:hover {
     text-decoration: none;
 }
 
-.link-interno {
-    color: #1DB954; 
-    text-decoration: none;
-}
-
-.link-interno:hover {
-    text-decoration: underline;
+.list-inline .divisor {
+    height: 1em;
+    vertical-align: middle;
 }
 
 /* =========================
