--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,39 +4,51 @@
       <div class="col-lg-auto mb-4">
         <h4>Company</h4>
         <ul class="navbar-nav">
-          <li><a href="/pages/sobre.html">Sobre</a></li>
-          <li><a href="/pages/empregos.html">Empregos</a></li>
-          <li><a href="/pages/imprensa.html">Imprensa</a></li>
-          <li><a href="/pages/novidades.html">Novidades</a></li>
+          <li><a href="{{BASE}}pages/sobre.html">Sobre</a></li>
+          <li><a href="{{BASE}}pages/empregos.html">Empregos</a></li>
+          <li><a href="{{BASE}}pages/imprensa.html">Imprensa</a></li>
+          <li><a href="{{BASE}}pages/novidades.html">Novidades</a></li>
         </ul>
       </div>
       <div class="col-lg-auto mb-4">
         <h4>Comunidades</h4>
         <ul class="navbar-nav">
-          <li><a href="/pages/artistas.html">Para Artistas</a></li>
-          <li><a href="/pages/desenvolvedores.html">Desenvolvedores</a></li>
-          <li><a href="/pages/marcas.html">Marcas</a></li>
+          <li><a href="{{BASE}}pages/artistas.html">Para Artistas</a></li>
+          <li><a href="{{BASE}}pages/desenvolvedores.html">Desenvolvedores</a></li>
+          <li><a href="{{BASE}}pages/marcas.html">Marcas</a></li>
         </ul>
       </div>
       <div class="col-lg-auto mb-4">
         <h4>Links Úteis</h4>
         <ul class="navbar-nav">
-          <li><a href="/pages/ajuda.html">Ajuda</a></li>
-          <li><a href="/pages/player-da-web.html">Player da Web</a></li>
-          <li><a href="/pages/aplicativo-movel-gratis.html">Aplicativo móvel grátis</a></li>
+          <li><a href="{{BASE}}pages/ajuda.html">Ajuda</a></li>
+          <li><a href="{{BASE}}pages/player-da-web.html">Player da Web</a></li>
+          <li><a href="{{BASE}}pages/aplicativo-movel-gratis.html">Aplicativo móvel grátis</a></li>
         </ul>
       </div>
       <div class="col-lg-auto mb-4">
         <h4>Site feito com:</h4>
         <ul id="media">
           <li>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" class="espaco devicon-img" alt="HTML5">
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg"
+              class="espaco devicon-img"
+              alt="HTML5"
+            >
           </li>
           <li>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" class="espaco devicon-img" alt="CSS3">
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg"
+              class="espaco devicon-img"
+              alt="CSS3"
+            >
           </li>
           <li>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg" class="espaco devicon-img" alt="JavaScript">
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg"
+              class="espaco devicon-img"
+              alt="JavaScript"
+            >
           </li>
         </ul>
       </div>
@@ -44,7 +56,12 @@
         <h4>Site feito por:</h4>
         <ul class="navbar-nav">
           <li>
-            <a href="https://github.com/Domisnnet/" target="_blank" class="navbar-link externo" id="dev">
+            <a
+              href="https://github.com/Domisnnet/"
+              target="_blank"
+              class="navbar-link externo"
+              id="dev"
+            >
               DomisDev
             </a>
           </li>
@@ -55,17 +72,17 @@
         <ul class="social-media-icons">
           <li>
             <a href="#" aria-label="Facebook">
-              <img src="../src/imagens/facebook.png" class="social-icon" alt="Facebook">
+              <img src="{{BASE}}src/imagens/facebook.png" class="social-icon" alt="Facebook">
             </a>
           </li>
           <li>
             <a href="#" aria-label="Twitter">
-              <img src="../src/imagens/twitter.png" class="social-icon" alt="Twitter">
+              <img src="{{BASE}}src/imagens/twitter.png" class="social-icon" alt="Twitter">
             </a>
           </li>
           <li>
             <a href="#" aria-label="Instagram">
-              <img src="../src/imagens/instagram.png" class="social-icon" alt="Instagram">
+              <img src="{{BASE}}src/imagens/instagram.png" class="social-icon" alt="Instagram">
             </a>
           </li>
         </ul>
@@ -73,11 +90,17 @@
     </div>
     <div class="footer-bottom mt-4 pt-4 border-top d-flex justify-content-between align-items-center">
       <ul class="list-inline mb-0">
-        <li class="list-inline-item"><a href="/pages/legal.html">Legal</a></li>
+        <li class="list-inline-item">
+          <a href="{{BASE}}pages/legal.html">Legal</a>
+        </li>
         <li class="list-inline-item divisor"></li>
-        <li class="list-inline-item"><a href="/pages/centro-de-privacidade.html">Centro de Privacidade</a></li>
+        <li class="list-inline-item">
+          <a href="{{BASE}}pages/centro-de-privacidade.html">Centro de Privacidade</a>
+        </li>
         <li class="list-inline-item divisor"></li>
-        <li class="list-inline-item"><a href="/pages/privacidade.html">Política de Privacidade</a></li>
+        <li class="list-inline-item">
+          <a href="{{BASE}}pages/privacidade.html">Política de Privacidade</a>
+        </li>
       </ul>
       <p class="text-muted mb-0">&copy; 2025 KingDomfy</p>
     </div>
