--- a/src/css/estilos-globais.css
+++ b/src/css/estilos-globais.css
@@ -69,7 +69,7 @@ body#home h3 {
    Navbar
 ========================= */
 nav.navbar-transparente {
-    background: rgba(0, 0, 0, 0.8);
+    background: #000;
 }
 
 .navbar-light .navbar-nav .nav-link {
