--- a/templates/footer.html
+++ b/templates/footer.html
@@ -91,18 +91,18 @@
     <div class="footer-bottom mt-4 pt-4 border-top d-flex justify-content-between align-items-center">
       <ul class="list-inline mb-0">
         <li class="list-inline-item">
+          <a href="{{BASE}}pages/centro-de-privacidade.html">Central</a>
+        </li>
+        <li class="list-inline-item divisor"></li>
+        <li class="list-inline-item">
           <a href="{{BASE}}pages/legal.html">Legal</a>
         </li>
         <li class="list-inline-item divisor"></li>
         <li class="list-inline-item">
-          <a href="{{BASE}}pages/centro-de-privacidade.html">Centro de Privacidade</a>
-        </li>
-        <li class="list-inline-item divisor"></li>
-        <li class="list-inline-item">
-          <a href="{{BASE}}pages/privacidade.html">Política de Privacidade</a>
+          <a href="{{BASE}}pages/privacidade.html">Privacidade</a>
         </li>
       </ul>
-      <p class="text-muted mb-0">&copy; 2025 KingDomfy</p>
+      <p class="text-muted mb-0">&copy; 2025 KingDomfy - Todos os direitos reservados.</p>
     </div>
   </div>
 </footer>
