--- a/templates/footer.html
+++ b/templates/footer.html
@@ -22,7 +22,7 @@
         <h4>Links Úteis</h4>
         <ul class="navbar-nav">
           <li><a href="{{BASE}}pages/ajuda.html">Ajuda</a></li>
-          <li><a href="{{BASE}}pages/player-da-web.html">Player da Web</a></li>
+          <li><a href="{{BASE}}pages/player.html">Player</a></li>
           <li><a href="{{BASE}}pages/aplicativo-movel-gratis.html">Aplicativo móvel grátis</a></li>
         </ul>
       </div>
