--- a/src/css/estilos-globais.css
+++ b/src/css/estilos-globais.css
@@ -252,6 +252,16 @@ body#player {
   color: var(--text-muted);
 }
 
+#volumeIcon {
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+#volumeIcon:hover {
+  color: var(--brand-orange);
+  transform: scale(1.1);
+}
+
 .active-control {
     color: #1db954 !important; 
     text-shadow: 0 0 10px rgba(29, 185, 84, 0.5);
