--- a/templates/header.html
+++ b/templates/header.html
@@ -1,8 +1,12 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top navbar">
     <div class="container">
-      <a href="{{BASE}}index.html" class="navbar-brand">
-        <img src="{{BASE}}src/imagens/KingDomfy.png" width="100" alt="Logo KingDomfy">
+      <a class="navbar-brand" href="{{BASE}}index.html">
+        <img
+          src="{{BASE}}src/imagens/KingDomfy.png"
+          alt="KingDomfy"
+          width="100"
+        >
       </a>
       <button
         class="navbar-toggler"
@@ -11,27 +15,27 @@
         data-target="#nav-principal"
         aria-controls="nav-principal"
         aria-expanded="false"
-        aria-label="Toggle navigation"
+        aria-label="Abrir menu"
       >
-        <i class="fas fa-bars text-white"></i>
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="nav-principal">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a href="{{BASE}}pages/premium.html" class="nav-link">Premium</a>
+            <a class="nav-link" href="{{BASE}}pages/premium.html">Premium</a>
           </li>
           <li class="nav-item">
-            <a href="{{BASE}}pages/ajuda.html" class="nav-link">Ajuda</a>
+            <a class="nav-link" href="{{BASE}}pages/ajuda.html">Ajuda</a>
           </li>
           <li class="nav-item">
-            <a href="{{BASE}}pages/baixar.html" class="nav-link">Baixar</a>
+            <a class="nav-link" href="{{BASE}}pages/baixar.html">Baixar</a>
           </li>
           <li class="nav-item divisor"></li>
           <li class="nav-item">
-            <a href="{{BASE}}pages/inscrever-se.html" class="nav-link">Inscrever-se</a>
+            <a class="nav-link" href="{{BASE}}pages/inscrever-se.html">Inscrever-se</a>
           </li>
           <li class="nav-item">
-            <a href="{{BASE}}pages/entrar.html" class="nav-link">Entrar</a>
+            <a class="nav-link" href="{{BASE}}pages/entrar.html">Entrar</a>
           </li>
         </ul>
       </div>
