--- a/src/css/estilos-globais.css
+++ b/src/css/estilos-globais.css
@@ -66,7 +66,7 @@ body#home h3 {
 /* =========================
     Navbar
 ========================= */
-nav.navbar-transparente {
+nav.navbar {
     background: #000;
 }
   
