--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,74 +1,74 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-lg-auto mb-4">
+      <div class="col-12 col-md-6 col-lg-auto mb-4">
         <h4>Company</h4>
-        <ul class="navbar-nav">
+        <ul class="footer-nav">
           <li><a href="{{BASE}}pages/sobre.html">Sobre</a></li>
           <li><a href="{{BASE}}pages/empregos.html">Empregos</a></li>
           <li><a href="{{BASE}}pages/imprensa.html">Imprensa</a></li>
           <li><a href="{{BASE}}pages/novidades.html">Novidades</a></li>
         </ul>
       </div>
-      <div class="col-lg-auto mb-4">
+      <div class="col-12 col-md-6 col-lg-auto mb-4">
         <h4>Comunidades</h4>
-        <ul class="navbar-nav">
+        <ul class="footer-nav">
           <li><a href="{{BASE}}pages/artistas.html">Para Artistas</a></li>
           <li><a href="{{BASE}}pages/desenvolvedores.html">Desenvolvedores</a></li>
           <li><a href="{{BASE}}pages/marcas.html">Marcas</a></li>
         </ul>
       </div>
-      <div class="col-lg-auto mb-4">
-        <h4>Links Úteis</h4>
-        <ul class="navbar-nav">
+      <div class="col-12 col-md-6 col-lg-auto mb-4">
+        <h4>Links úteis</h4>
+        <ul class="footer-nav">
           <li><a href="{{BASE}}pages/ajuda.html">Ajuda</a></li>
           <li><a href="{{BASE}}pages/player.html">Player</a></li>
           <li><a href="{{BASE}}pages/aplicativo-movel-gratis.html">Aplicativo móvel grátis</a></li>
         </ul>
       </div>
-      <div class="col-lg-auto mb-4">
-        <h4>Site feito com:</h4>
+      <div class="col-12 col-md-6 col-lg-auto mb-4">
+        <h4>Site feito com</h4>
         <ul id="media">
           <li>
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg"
-              class="espaco devicon-img"
+              class="devicon-img"
               alt="HTML5"
             >
           </li>
           <li>
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg"
-              class="espaco devicon-img"
+              class="devicon-img"
               alt="CSS3"
             >
           </li>
           <li>
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg"
-              class="espaco devicon-img"
+              class="devicon-img"
               alt="JavaScript"
             >
           </li>
         </ul>
       </div>
-      <div class="col-lg-auto mb-4">
-        <h4>Site feito por:</h4>
-        <ul class="navbar-nav">
+      <div class="col-12 col-md-6 col-lg-auto mb-4">
+        <h4>Site feito por</h4>
+        <ul class="footer-nav">
           <li>
             <a
               href="https://github.com/Domisnnet/"
               target="_blank"
-              class="navbar-link externo"
               id="dev"
+              class="externo"
             >
               DomisDev
             </a>
           </li>
         </ul>
       </div>
-      <div class="col-lg-auto mb-4 ml-lg-auto">
-        <h4>Redes Sociais</h4>
+      <div class="col-12 col-md-6 col-lg-auto mb-4 ml-lg-auto">
+        <h4>Redes sociais</h4>
         <ul class="social-media-icons">
           <li>
             <a href="#" aria-label="Facebook">
@@ -90,19 +90,15 @@
     </div>
     <div class="footer-bottom mt-4 pt-4 border-top d-flex justify-content-between align-items-center">
       <ul class="list-inline mb-0">
-        <li class="list-inline-item">
-          <a href="{{BASE}}pages/centro-de-privacidade.html">Central</a>
-        </li>
+        <li class="list-inline-item"><a href="{{BASE}}pages/centro-de-privacidade.html">Central</a></li>
         <li class="list-inline-item divisor"></li>
-        <li class="list-inline-item">
-          <a href="{{BASE}}pages/legal.html">Legal</a>
-        </li>
+        <li class="list-inline-item"><a href="{{BASE}}pages/legal.html">Legal</a></li>
         <li class="list-inline-item divisor"></li>
-        <li class="list-inline-item">
-          <a href="{{BASE}}pages/privacidade.html">Privacidade</a>
-        </li>
+        <li class="list-inline-item"><a href="{{BASE}}pages/privacidade.html">Privacidade</a></li>
       </ul>
-      <p class="text-muted mb-0">&copy; 2025 KingDomfy - Todos os direitos reservados.</p>
+      <p class="text-muted mb-0">
+        &copy; 2025 KingDomfy — Todos os direitos reservados
+      </p>
     </div>
   </div>
 </footer>
