--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,26 +4,26 @@
       <div class="col-12 col-md-6 col-lg-auto mb-4">
         <h4>Company</h4>
         <ul class="footer-nav">
-          <li><a href="{{BASE}}pages/sobre.html">Sobre</a></li>
-          <li><a href="{{BASE}}pages/empregos.html">Empregos</a></li>
-          <li><a href="{{BASE}}pages/imprensa.html">Imprensa</a></li>
-          <li><a href="{{BASE}}pages/novidades.html">Novidades</a></li>
+          <li class="footer-link"><a href="{{BASE}}pages/sobre.html">Sobre</a></li>
+          <li class="footer-link"><a href="{{BASE}}pages/empregos.html">Empregos</a></li>
+          <li class="footer-link"><a href="{{BASE}}pages/imprensa.html">Imprensa</a></li>
+          <li class="footer-link"><a href="{{BASE}}pages/novidades.html">Novidades</a></li>
         </ul>
       </div>
       <div class="col-12 col-md-6 col-lg-auto mb-4">
         <h4>Comunidades</h4>
         <ul class="footer-nav">
-          <li><a href="{{BASE}}pages/artistas.html">Para Artistas</a></li>
-          <li><a href="{{BASE}}pages/desenvolvedores.html">Desenvolvedores</a></li>
-          <li><a href="{{BASE}}pages/marcas.html">Marcas</a></li>
+          <li class="footer-link"><a href="{{BASE}}pages/artistas.html">Para Artistas</a></li>
+          <li class="footer-link"><a href="{{BASE}}pages/desenvolvedores.html">Desenvolvedores</a></li>
+          <li class="footer-link"><a href="{{BASE}}pages/marcas.html">Marcas</a></li>
         </ul>
       </div>
       <div class="col-12 col-md-6 col-lg-auto mb-4">
         <h4>Links úteis</h4>
         <ul class="footer-nav">
-          <li><a href="{{BASE}}pages/ajuda.html">Ajuda</a></li>
-          <li><a href="{{BASE}}pages/player.html">Player</a></li>
-          <li><a href="{{BASE}}pages/aplicativo-movel-gratis.html">Aplicativo móvel grátis</a></li>
+          <li class="footer-link"><a href="{{BASE}}pages/ajuda.html">Ajuda</a></li>
+          <li class="footer-link"><a href="{{BASE}}pages/player.html">Player</a></li>
+          <li class="footer-link"><a href="{{BASE}}pages/aplicativo-movel-gratis.html">Aplicativo móvel grátis</a></li>
         </ul>
       </div>
       <div class="col-12 col-md-6 col-lg-auto mb-4">
