--- a/templates/footer.html
+++ b/templates/footer.html
@@ -98,3 +98,5 @@
     </div>
   </div>
 </footer>
+<script src="{{BASE}}vendor/fontawesome/js/all.min.js"></script>
+<script src="{{BASE}}vendor/fontawesome/js/v4-shims.min.js"></script>
