--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,7 @@
     <div class="container">
       <a class="navbar-brand" href="{{BASE}}index.html">
         <img
-          src="{{BASE}}src/imagens/KingDomfy.png"
+          src="{{BASE}}src/imagens/KingDomfy-logo.png"
           alt="KingDomfy"
           width="100"
         >
