--- a/templates/header.html
+++ b/templates/header.html
@@ -34,7 +34,7 @@
           <li class="nav-item">
             <a class="nav-link" href="{{BASE}}pages/inscrever-se.html">Inscrever-se</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item btn-custom">
             <a class="nav-link" href="{{BASE}}pages/entrar.html">Entrar</a>
           </li>
         </ul>
