--- a/templates/header.html
+++ b/templates/header.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="{{BASE}}pages/inscrever-se.html">Inscrever-se</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{BASE}}pages/entrar.html">Entrar</a>
+            <a class="nav-link btn-custom" href="{{BASE}}pages/entrar.html">Entrar</a>
           </li>
         </ul>
       </div>
